--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,7 +34,7 @@
                 <div class="navbar-nav">
                   {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a> 
-                    <a class="nav-item nav-link" href="logout">Logout</a>
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                     <p class="nav-item nav-link">{{ user.username }}</p>
                   {% else %}
                     <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
